# SaGEA

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/GIA/: GIA.Caron_Ivins_2019.txt  GIA.Caron_et_al_2018.txt  GIA.ICE-6G_C.txt  GIA.ICE-6G_D.txt
data/auxiliary/: LoveNumber.mat
demo/data_collecting/: demoCollectAuxiliary.py  demoCollectGLDAS.py  demoCollectL2Data.py
demo/post_processing/: demoMultiPostProcessing.py  demoPostProcessing.py  demoPostProcessing2.py  demoPostProcessingNew.py
demo/uncertainty_estimation/: demoErrorI.py  demoErrorII.py  demoErrorIII.py
examples/: FSC_filtering.py  demo_filtering.py
examples/FSC_filtering/notebook/: Notebook_FSC.ipynb
examples/FSC_filtering/results_FSC/: validation_filtered_grid.npz
examples/v0.2.9/: 01_inbuild_document.ipynb  02_postprocessing_to_ewh.ipynb  03_cov_prop.ipynb
examples/v0.3.0/: 02_postprocessing_to_ewh.ipynb  04_error_assess_TCH.ipynb  04_error_assess_TCH_and_TCA.ipynb
pysrc/auxiliary/aux_tool/: FileTool.py  MathTool.py  TimeTool.py
pysrc/auxiliary/core/: GRID.py  SHC.py
pysrc/auxiliary/core_data_class/: CoreGRID.py  CoreSHC.py
pysrc/auxiliary/load_file/: LoadCov.py  LoadGIA.py  LoadL2LowDeg.py  LoadL2SH.py  LoadNoah.py  LoadShp.py
pysrc/auxiliary/preference/: Constants.py  EnumClasses.py
pysrc/auxiliary/scripts/: MakeHDF5.py  MatchConfigWithEnums.py  PlotGrids.py  PlotSHC.py
pysrc/auxiliary/tools/: FileTool.py  MathTool.py
pysrc/data_class/: DataClass.py  DateSeries.py  GRD.py  GRID.py  SHC.py
pysrc/data_collecting/collect_GRACE_L2/: CollectL2SH.py
pysrc/data_collection/collect_GLDAS/: CollectGLDAS.py
pysrc/data_collection/collect_GRACE_L2/: CollectL2Cov.py  CollectL2LowDeg.py  CollectL2SH.py
pysrc/post_processing/GAX_correction/: GAXCorrection.py
pysrc/post_processing/GIA_correction/: GIACorrectionSpectral.py
pysrc/post_processing/GMAMCorrection/: GMAMCorrection.py
pysrc/post_processing/Love_number/: LoveNumber.py
pysrc/post_processing/convert_field_physical_quantity/: ConvertSHC.py
pysrc/post_processing/de_aliasing/: DeAliasing.py
pysrc/post_processing/extract_basin_signal/: ExtractSpatialSignal.py  ExtractSpatialSignalConfig.py  ExtractSpectralSignal.py  ExtractSpectralSignalConfig.py
pysrc/post_processing/filter/: AnisotropicGaussianHan.py  Base.py  DDK.py  Fan.py  Gaussian.py  GetSHCFilter.py  PnMm.py  SlideWindow.py  VariableScale.py  get_filter.py
pysrc/post_processing/geometric_correction/: GeoidUndulation.py  GeometricCorrection.py  GeometricalCorrection.py  RefEllipsoid.py
pysrc/post_processing/harmonic/: Harmonic.py  Harmonic_experiments.py  Quadratures.py
pysrc/post_processing/leakage/: Addictive.py  Base.py  BaseModelDriven.py  BufferZone.py  DataDriven.py  ForwardModeling.py  GetLeakageDeductor.py  Iterative.py  Multiplicative.py  Scaling.py  ScalingGrid.py
pysrc/post_processing/replace_low_deg/: ReplaceLowDegree.py
pysrc/post_processing/seismic/: Seismic.py
pysrc/post_processing/seismic_correction/: Seismic.py  SeismicCorrection.py
pysrc/time_series_analysis/: OrdinaryLeastSquare.py
pysrc/time_series_analysis/OrdinaryLeastSquare/: OLS.py
pysrc/time_series_analysis/WeightedLeastSquare/: WLS.py
pysrc/uncertainty_estimating/covaiance_propagation/: BasinSumPropagation.py  CSToRegionPropagation.py  ConvertSHCPropagation.py  DDKPropagation.py  GaussianPropagation.py  HarmonicPropagation.py
pysrc/uncertainty_estimating/monte_carlo/: MonteCarlo.py
pysrc/uncertainty_estimating/three_coener_hat/: SeparateTCH.py  TCH.py
pysrc/user_interface/: Main.py  MainMenu.py  MainMenu.ui  PostProcessingResults.py  PostProcessingResults.ui
setting/data_collecting/: CollectL2Data.json
setting/data_collection/: CollectGLDAS.json  CollectL2Data.json
setting/post_processing/: MultiPostProcessing.json  PostProcessing.json  PostProcessingNew.json  earthquakes.json
src/: __init__.py
src/sagea/: __init__.py  constant.py  constants.py  core.py
src/sagea/constants/: constant.py
src/sagea/core/: __init__.py  _grd_extract_wrapper.py  _namespace_accessor.py  _shc_correction_wrapper.py  _shc_filter_wrapper.py  _shc_generator_wrapper.py  _shc_io_wrapper.py  _shc_synthesize_wrapper.py  grid.py  shc.py
src/sagea/corrections/: __init__.py
src/sagea/data/: __init__.py
src/sagea/error_assessment/: __init__.py
test/: TestNewHar.py
update_logs/: todo.md  update_todo.md
(+89 files in other folders)
